tests/fixtures/invalid/pow_list_set_float.py
# Cannot call pow() with List[int], Set[int], Float
x = pow([1, 2, 3], {1, 2, 3}, 1.0)
